@@ -20,7 +20,7 @@
 
 
 
-static char software_version[] = "$Id: t0002.c,v 1.9 2004-09-09 08:54:49 freddy77 Exp $";
+static char software_version[] = "$Id: t0002.c,v 1.10 2005-01-07 16:59:43 jklowden Exp $";
 static void *no_unused_var_warn[] = { software_version, no_unused_var_warn };
 
 
@@ -103,6 +103,10 @@ main(int argc, char **argv)
 	add_bread_crumb();
 	while (dbresults(dbproc) != NO_MORE_RESULTS) {
 		/* nop */
+	}
+	if (dbresults(dbproc) != NO_MORE_RESULTS) {
+		fprintf(stdout, "Failed: dbresults call after NO_MORE_RESULTS should return NO_MORE_RESULTS.\n");
+		failed = 1;
 	}
 	add_bread_crumb();
 
